--- a/surveyapp/templates/page1.html
+++ b/surveyapp/templates/page1.html
@@ -29,11 +29,11 @@
 
         .image-container {
             width: 100%;
-            height: 300px;
-            background-image: url('https://cnectgpo.com/wp-content/uploads/2023/04/Blog-Image_AI_-600-x-400_-01.jpg');
+            height: 520px;
+            background-image: url('https://jivanutx.com/images/survery-form-header-image600x400.jpg');
             background-size: cover;
             background-repeat: no-repeat;
-            background-position: center;
+            background-position: center; 
         }
 
         .form-container {
@@ -89,7 +89,7 @@
 
         @media (max-width: 768px) {
             .image-container {
-                height: 200px;
+                height: 250px;
             }
 
             .form-container {
