add session based authentication to restrict dashboard page

--- a/surveyapp/templates/dashboard.html
+++ b/surveyapp/templates/dashboard.html
@@ -213,17 +213,13 @@
 <body>
 
     <div class="card" >
-        <p>Hello, {{ request.user.username }}!</p>
-        {% comment %} <a href="{% url 'logout' %}">Logout</a> {% endcomment %}
-
-
-
-
         <div class="card-body" >
+            <p>Hello, {{ request.user.username }}!</p>
             <!-- Export Data button -->
             <a  href="{% url 'export_to_excel' %}">
             <button  style="margin-bottom: 15px;">Export Data to Excel</button>
             </a>
+            <a href="{% url 'logout' %}">Logout</a>
 
             <h2 class="centered-heading">Survey Dashboard</h2>
             <table class="table table-hover table-bordered">
